<resources>
    <string name="app_name">AttendEase</string>
    <string name="student">Student</string>
    <string name="name">Name</string>
    <string name="enroll">Enroll</string>
    <string name="batch">Batch</string>
    <string name="branch">Branch</string>
    <string name="send_data">Send Data</string>
    <string name="nfc_status_waiting">NFC Status: Waiting…</string>
    <string name="start_receiving_data">Start Receiving Data</string>
    <string name="toggle_nfc">Toggle NFC</string>
    <string name="attendee">Attendee</string>
    <string name="transmit_attendance">Transmit Attendance</string>
</resources>